--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,3 +37,13 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
+
+.avatar {
+  display: inline-block;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  margin-right: 10px;
+  width: 40px;
+  height: auto;
+}
